--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:            Site Title
-description:      Describe your website here.
+title:  Ruhaan
+description:      I'm awesome.
 disqus_shortname: hpstrtheme
-reading_time:     true
+reading_time:     false
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
@@ -9,14 +9,14 @@ url:
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Ruhaan the king of awesomeness
   avatar:         avatar.jpg
-  bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
-  email:          you@email.com
+  bio:            "I'm just awesome. Need any more? Nah, didn't think so."
+  email:          bhattruhaan@gmail.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
   facebook:       
-  github:         
+  github:         https://github.com/Ruhaan26
   stackexchange:  
   linkedin:       
   instagram:      
