--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:  Ruhaan
+title:  Ruhaan the king of awesomeness
 description:      I'm awesome.
 disqus_shortname: hpstrtheme
 reading_time:     false
@@ -23,7 +23,7 @@ owner:
   flickr:         
   tumblr:         
   # google plus id, include the '+', eg +mmistakes
-  google_plus:    +yourid
+  google_plus:    
 
 # Background image to be tiled on all pages
 background: 
